# antiphon

./: .dockerignore  .gitignore  Cargo.toml  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.agents/skills/: .gitignore
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/server/: .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
apps/web/: index.html  package.json  vite.config.ts
deploy/: .env.prod.example  Caddyfile
docs/: ARCHITECTURE.md  demo-m1.md  deploy.md  design-system.md  ios-capture-runbook.md  releasing.md
docs/rfcs/: 0001-amendments-proposed.md  0001-protocol.md
e2e/: live-validate.mjs  make-favicon-ico.mjs  package.json  playwright.config.ts  ports.ts  screenshot.mjs  tsconfig.json
e2e/tests/: align-selection.spec.ts  alignment-state.spec.ts  auth-keyless.spec.ts  capture.spec.ts  clip-arrange.spec.ts  collab.spec.ts  comments.spec.ts  concurrent-sessions.spec.ts  content-align.spec.ts  daw-export.spec.ts  desk-fatal.spec.ts  desk-input.spec.ts  desk-reload.spec.ts  dropout-ui.spec.ts  endstop.spec.ts  eq.spec.ts  error-strip.spec.ts  export.spec.ts  fatal.spec.ts  join-polish.spec.ts  lane-order.spec.ts  live-clerk.spec.ts  m1-demo.spec.ts  markers.spec.ts  mic-picker.spec.ts  midi-opfs.spec.ts  midi.spec.ts  mixer-interactions.spec.ts  mixer.spec.ts  multi-take.spec.ts  phone-reload.spec.ts  playback-gapless.spec.ts  qr.spec.ts  ruler-interaction.spec.ts  smoke.spec.ts  (+13 more)
scripts/: check-node.cjs  release.sh
(+254 files in other folders)
