[workspace]
resolver = "3"
members = ["packages/core", "packages/codec", "packages/dsp", "packages/wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/matias/antiphon"

[workspace.dependencies]
antiphon-core = { path = "packages/core" }
antiphon-codec = { path = "packages/codec" }
antiphon-dsp = { path = "packages/dsp" }

thiserror = "2"
flacenc = { version = "0.5", default-features = false }
realfft = "3.5"
rubato = "3.0"
proptest = "1.11"
# dev-only: pure-Rust FLAC decoder to verify encodes are lossless
claxon = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

# wasm-opt runs in CI via wasm-pack; keep release builds small and fast
[profile.release]
opt-level = 3
lto = "thin"

[profile.release.package.antiphon-wasm]
opt-level = "s"
